--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,21 @@
 .App {
   text-align: center;
 }
-
 form {
   display: inline-block;
   text-align: left;
+  color: #00FF0C;
 }
-
 label {
   margin-right: 8px;
+  color: #00FF0C;
 }
-
 input {
   margin-bottom: 10px;
+  color: #00FF0C;
 }
-
 button {
   display: block;
   margin-top: 10px;
+  color: #00FF0C;
 }
